AUGREL/src/objects/Forms_ErrorMessages__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To display Error Message based on ErrorCode.</description>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_code__c</fullName>
        <label>Error Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Forms_ErrorMessages</label>
</CustomObject>